--- a/Capitoli/Realizzazione.tex
+++ b/Capitoli/Realizzazione.tex
@@ -61,7 +61,8 @@ Ovviamente si poteva avere lo stesso risultato utilizzando altre librerie grafic
 \subsection{Leggere e scrivere i dati}
 Il plugin prende in ingresso i file contenenti i dati necessari per l'applicazione al modello matematico descritto dall'equazione \ref{eq:main}. Quindi, una volta eseguite le operazioni produce l'output corrispondente all'erosione per il numero di anni dati in input.
 
-Le operazioni di lettura e scrittura sono le operazioni più sensibili in questo applictivo in quanto non c'è modo di controllare la correttezza dei dati in input dal punto di vista fisico/geologico, solo dal punto di vista informatico di buona formattazione.
+Le operazioni di lettura e scrittura sono le operazioni più sensibili in questo applicativo in quanto non c'è modo di controllare la correttezza dei dati in input dal punto di vista fisico/geologico, solo dal punto di vista informatico di buona formattazione.
+Per questo motivo assumiamo da questo punto in poi che i dati passati in input siano corretti dal punto di vista geologico ma non obbligatoriamente corretto dal punto di vista della formattazione\footcite{Il controllo del formato del file viene fatto in modo automatico quando il plugin cerca di caricare i file passati per indirizzo}. 
 
 \subsubsection{Input}
 Per una questione di coerenza rispetto a QGis è stato deciso di passare i dati in input come file, in modo che possano essere facilmente condivisi e possano interagire più facilmente con QGis stesso. Per fare ciò è stato necessario fare una ricerca sui tipi di file utilizzati per i dati georefernziati.
