Add part about driver listing and support

--- a/Capitoli/Appendice.tex
+++ b/Capitoli/Appendice.tex
@@ -47,4 +47,4 @@ Questi dati vengono divisi in due macrocategorie:
 
 \subsection{GdalTools\_utils.py}
 Script dal pacchetto GdalTools. Permette di aprire una finestra di salvataggio del file. Utilizzandola siamo obbligati a utilizzare la licenza GNU GPU v2 o superiore.
-E' stato scelto di utilizzare questo script all'interno del progetto in modo da evitare dipendenze dal pacchetto GdalTools che risulta essere incompatibile con alcune installazioni di python e alcuni plugin. Per questo motivo, seguendo le indicazioni della licenza e condizioni d'uso di GdalTools, è stato copiato in modo integrale il file \textit{GdalTools\_utils.py} contenente la funzione necessaria per la visualizzazione della finestre e dell'elenco dei formati disponibili.
+\egrave stato scelto di utilizzare questo script all'interno del progetto in modo da evitare dipendenze dal pacchetto GdalTools che risulta essere incompatibile con alcune installazioni di python e alcuni plugin. Per questo motivo, seguendo le indicazioni della licenza e condizioni d'uso di GdalTools, è stato copiato in modo integrale il file \textit{GdalTools\_utils.py} contenente la funzione necessaria per la visualizzazione della finestre e dell'elenco dei formati disponibili.
