--- a/MaterialeInizialeFinale/Introduzione.tex
+++ b/MaterialeInizialeFinale/Introduzione.tex
@@ -13,4 +13,4 @@
 
 In questa tesi viene spiegato come è stato realizzato un plugin per QGis per il calcolo del terreno eroso avendo dei dati geomorfici legati al territorio scelto. Questi dati comprendono la conformazione del terreno, le precipitazioni registrate nell'area, il tipo di copertura della vegetazione e il numero di anni per cui questa previsione viene eseguita.
 
-Questo plugin è stato scritto in Python e implementa il plugin ipotizzato nella tesi \cite{tesi:ambientale} che risulta essere indipendente e utilizzabile per il calcolo su una qualunque area geografica di cui si hanno i dati richiesti. In oltre il sistema risulta indipendente dalle dimensioni dell'area geografica selezionata. E' infatti possibile inserire un'area geografica di una qualsiasi dimensione per procedere con l'elaborazione. Da questo punto di vista il programma può procedere con aree geografiche grandi quanto continenti ma non è detto che il modello matematico si comporti correttamente con aree sufficientemente grandi o piccole rispetto alla precisione dei dati acquisiti.
+Questo plugin è stato scritto in Python e implementa il plugin ipotizzato nella tesi \cite{tesi:ambientale} che risulta essere indipendente e utilizzabile per il calcolo su una qualunque area geografica di cui si hanno i dati richiesti. In oltre il sistema risulta indipendente dalle dimensioni dell'area geografica selezionata. \egrave infatti possibile inserire un'area geografica di una qualsiasi dimensione per procedere con l'elaborazione. Da questo punto di vista il programma può procedere con aree geografiche grandi quanto continenti ma non è detto che il modello matematico si comporti correttamente con aree sufficientemente grandi o piccole rispetto alla precisione dei dati acquisiti.
