Other problem with bibliography

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -24,15 +24,13 @@
 }
 
 @Online{site:cc3,
-  title   = {Creative Commons - Attribution-ShareAlike 3.0 Unported - CC BY-SA 3.0},
-  url     = {http://creativecommons.org/licenses/by-sa/3.0/},
-  comment = {Licenza Creative Commons tipo 3},
+  Comment                  = {Licenza Creative Commons tipo 3},
+  URL                      = {http://creativecommons.org/licenses/by-sa/3.0/}
 }
 
 @Online{site:qgis,
-  title   = {Pagina del progetto di QGis},
-  url     = {http://www.qgis.org/it/},
-  comment = {QGis sito ufficiale},
+  Comment                  = {QGis sito ufficiale},
+  URL                      = {http://www.qgis.org/it/}
 }
 
 @MastersThesis{tesi:ambientale,
@@ -41,24 +39,3 @@
   School                   = {Università Ca Foscari Venezia},
   Year                     = {2013/2014}
 }
-
-@Article{article:models,
-  author       = {Claudio Bosco, Stefano Olivieri},
-  title        = {Climate Change, Impacts and Adaptation Strategies in the Alpine Space},
-  journaltitle = {Strategic INTERREG III B Project CLIMCHALP},
-  year         = {2008},
-  date         = {2008-01-29},
-}
-
-@Online{site:qgisapi,
-  author = {QGis Community},
-  title  = {QGis Api for Developer},
-  url    = {http://qgis.org/api/},
-}
-
-@Manual{manuale:idrisi,
-  author = {Clark Labs},
-  title  = {Manuali utente di IDRISI GIS Analysis},
-}
-
-@Comment{jabref-meta: databaseType:biblatex;}
