--- a/Capitoli/Realizzazione.tex
+++ b/Capitoli/Realizzazione.tex
@@ -62,7 +62,7 @@ Ovviamente si poteva avere lo stesso risultato utilizzando altre librerie grafic
 Il plugin prende in ingresso i file contenenti i dati necessari per l'applicazione al modello matematico descritto dall'equazione \ref{eq:main}. Quindi, una volta eseguite le operazioni produce l'output corrispondente all'erosione per il numero di anni dati in input.
 
 Le operazioni di lettura e scrittura sono le operazioni più sensibili in questo applicativo in quanto non c'è modo di controllare la correttezza dei dati in input dal punto di vista fisico/geologico, solo dal punto di vista informatico di buona formattazione.
-Per questo motivo assumiamo da questo punto in poi che i dati passati in input siano corretti dal punto di vista geologico ma non obbligatoriamente corretto dal punto di vista della formattazione\footcite{Il controllo del formato del file viene fatto in modo automatico quando il plugin cerca di caricare i file passati per indirizzo}.
+Per questo motivo assumiamo da questo punto in poi che i dati passati in input siano corretti dal punto di vista geologico ma non obbligatoriamente corretto dal punto di vista della formattazione\footnote{Il controllo del formato del file viene fatto in modo automatico quando il plugin cerca di caricare i file passati per indirizzo}.
 
 \subsubsection{Input}
 Per una questione di coerenza rispetto a QGis è stato deciso di passare i dati in input seguendo gli standard internazionali, in modo che possano essere facilmente condivisi e possano interagire più facilmente con QGis stesso. Per fare ciò è stato necessario fare una ricerca sui tipi di file utilizzati per i dati georeferenziati.
@@ -71,7 +71,7 @@ Si è quindi iniziato recuperando l'elenco dei formati supportati nativamente da
 
 \egrave stata quindi usata una delle funzioni del core di QGis per abbinare il formato di file ricevuto in input con quelli in memoria di QGis in modo da poter utilizzare il driver corretto per l'elaborazione. L'elenco che viene esaminato per l'ottenimento del driver si riferisce solo ai driver che permettono la lettura del file. Se per qualche ragione ci fossero dei driver di sola scrittura per qualche formato di file allora questi non apparirebbero tra i driver utilizzabili\footnote{Da tenere in considerazione quando si eseguono i comandi direttamente da terminale, in quanto lo stesso comando, in base al parametro passato, ritorna tutti i driver o solo quelli di lettura o solo quelli di scrittura}.
 
-Grazie a questo sistema si è potuto evitare di dover creare un archivio dei formati disponibili e dei driver esistenti che avremmo dovuto cercare all'interno del computer in cui si esegue il plugin. Invece viene consultato il catalogo interno di QGis che viene interamente gestito dall'installazione di QGis e da i plugin che aggiungono supporto per altri formati, ottenendo così un elenco in tempo reale e senza ulteriore sforzo da parte del plugin. 
+Grazie a questo sistema si è potuto evitare di dover creare un archivio dei formati disponibili e dei driver esistenti che avremmo dovuto cercare all'interno del computer in cui si esegue il plugin. Invece viene consultato il catalogo interno di QGis che viene interamente gestito dall'installazione di QGis e da i plugin che aggiungono supporto per altri formati, ottenendo così un elenco in tempo reale e senza ulteriore sforzo da parte del plugin.
 
 In oltre, il codice di gestione per i file in input è integrato nell'interfaccia grafica in modo da rendere semplice l'inserimento di dati all'interno del programma stesso. Supporta comunque l'utilizzo attraverso il terminale di QGis anche se ne è sconsigliato l'uso ai meno esperti e a chi si approccia per la prima volta a questo plugin.
 %TODO inserire immagine apertura file
