Adding fix for spaces

--- a/impostazioni-tesi.tex
+++ b/impostazioni-tesi.tex
@@ -25,7 +25,9 @@
 
 \newcommand*{\egrave}{\MakeUppercase{è} }
 \newcommand*{\ograve}{\MakeUppercase{ò} }
-\newcommand{\rusle}{\textbf{\textit{Rusle}}}
+
+\usepackage{xspace}
+\newcommand{\rusle}{\textbf{\textit{Rusle}}\xspace}
 
 % un ambiente per i sistemi
 \newenvironment{sistema}%
