--- a/Tesi.tex
+++ b/Tesi.tex
@@ -1,4 +1,4 @@
-% !0TEX encoding = UTF-8 Unicode
+% !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = pdflatex
 % !TEX root = Tesi.tex
 % !TeX spellcheck = it_IT
