Fix pre consegna

--- a/MaterialeInizialeFinale/Frontespizio.tex
+++ b/MaterialeInizialeFinale/Frontespizio.tex
@@ -14,7 +14,7 @@
 \Annoaccademico{2016--2017}
 \Titoletto{Tesi di laurea}
 \Titolo{Implementazione del modello RUSLE attraverso plugin per QGis}
-\Sottotitolo{Titolo provvisorio}
+\Sottotitolo{}
 \Candidato[845087]{Matteo Scarpa}
 \Relatore{Claudio Silvestri}
 \end{frontespizio}
